--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "./src/bin/www",
+    "dev": "nodemon ./src/bin/www"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
