--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 node_modules
-npm-debug.log
-src/examples
+mock
+
+*.log
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
