--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   },
   "dependencies": {
     "body-parser": "~1.16.0",
-    "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
-    "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "pug": "^2.0.0-beta11",
     "sequelize": "^3.30.2",
     "sequelize-cli": "^2.5.1",
     "serve-favicon": "~2.3.2",
