--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.16.0",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "moment": "^2.17.1",
     "morgan": "~1.7.0",
     "pug": "^2.0.0-beta11",
     "sequelize": "^3.30.2",
