--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,8 @@
 {
   "development": {
     "storage": "db/library.db",
-    "dialect": "sqlite"
+    "dialect": "sqlite",
+    "logging": false
   },
   "test": {
     "storage": "db/library.db",
